--- a/index.html
+++ b/index.html
@@ -1,149 +1,104 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sreejith Unnikrishnan</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    
+    <nav>
+        <a href="#" class="logo"><div class="rec"></div>SREEJITH UNNIKRISHNAN</a>
+        <div class="nav-right">
+            <a href="https://www.linkedin.com/in/sreejithu/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/srunnikr" target="_blank">Github</a>
+        </div>
+    </nav>
 
-	<head>
-		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title> Sreejith Unnikrishnan </title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Merriweather|Open+Sans" rel="stylesheet">
-	</head>
+    <div class="wrapper-content">
 
-	<body>
+        <div class="landing animated fadeInUp">
+            <h1>
+                <span class="im-class">I'm</span>
+                <br>Sreejith
+                <br>Unnikrishnan
+                <br><span class="title-class">Senior Firmware Engineer</span>
+                <br><span class="title-company">Fitbit</span>
+            </h1>
+        </div>
 
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-		  	<div class="container-fluid">
-		    	<div class="navbar-header">
-		      		<a class="navbar-brand" href="index.html">Sreejith Unnikrishnan</a>
-		    	</div>
-			    <ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="contact.html">Contact</a></li>
-			    </ul>
-		  	</div>
-		</nav>
+        <div class="experience-section">
+            <div class="left wow fadeInLeft delay-1">
+                <h2>Experience</h2>
+            </div>
+            <div class="right">
+                <h2 class="experience-entry wow fadeInRight delay-1">Senior Firmware Engineer
+                    <br>
+                    <span class="company">Fitbit</span>
+                    <span class="experience-entry-year">(2018 - Present)</span>
+                </h2>
+                <h2 class="experience-entry wow fadeInRight delay-2">Firmware Engineer
+                    <br>
+                    <span class="company">Fitbit</span>
+                    <span class="experience-entry-year">(2017 - 2018)</span>
+                </h2>
+                <h2 class="experience-entry wow fadeInRight delay-3">Software Development Intern
+                    <br>
+                    <span class="company">Microsoft</span>
+                    <span class="experience-entry-year">(2016)</span>
+                </h2>
+                <h2 class="experience-entry wow fadeInRight delay-4">Senior Engineer
+                    <br>
+                    <span class="company">Nokia Networks</span>
+                    <span class="experience-entry-year">(2014 - 2015)</span>
+                </h2>
+                <h2 class="experience-entry wow fadeInRight delay-5">Software Engineer
+                    <br>
+                    <span class="company">Nokia Networks</span>
+                    <span class="experience-entry-year">(2013 - 2014)</span>
+                </h2>
+            </div>
+        </div>
 
-		<div class="jumbotron">
-			<div class="heading">
-				<h1>Hi, I am Sreejith</h1>
-				<hr class="hr">
-				<p class="introParagraph">Firmware Engineer, Fitbit</p>
-				<br>
-				<p class="introParagraph">MS Computer Science, University of California San Diego</p>
-			</div>
-		</div>
+        <div class="skills-section">
+            <div class="left">
+                <h2 class="skills-entry wow fadeInLeft delay-1">Software Development
+                    <br>
+                    <span class="skills-entry-detail">C, Python, HTML, CSS, JS, Java</span>
+                </h2>
+                <h2 class="skills-entry wow fadeInLeft delay-2">Firmware Engineering
+                    <br>
+                    <span class="skills-entry-detail">Embedded-C, RTOS, GDB, JLink</span>
+                </h2>
+                <h2 class="skills-entry wow fadeInLeft delay-3">Networking
+                    <br>
+                    <span class="skills-entry-detail">CoAP, TCP/IP, UDP, IGMP, PIM-SM, Ethernet</span>
+                </h2>
+                <h2 class="skills-entry wow fadeInLeft delay-4">Framework &amp; OS
+                    <br>
+                    <span class="skills-entry-detail">Bootstap4, NodeJS, ThreadX, Unix</span>
+                </h2>
+            </div>
+            <div class="right wow fadeInRight delay-1">
+                <h2>Skills</h2>
+            </div>
+        </div>
 
-		<div class="container-fluid intro-text">
-			I am a software engineer. I write code with an emphasis on building better computer systems for all. <br>
-			I have a strong affinity for systems programming and embedded technology. <br>
-			Currently I am working as a firmware engineer at Fitbit. I work with BLE and communication stack on Fitbit devices. <br>
-			My present adventure revolves around architecting a new IP over BLE solution for future fitness trackers from Fitbit.
-		</div>
+    </div>
 
-		<div class="container-fluid section">
-			<h2> Skills </h2>
-			<hr>
-		</div>
+    <footer>
+        <p>2019 &copy;Sreejith Unnikrishnan</p>
+    </footer>
 
-		<div class="container-fluid skills-images">
-			<ul>
-				<li><img class="skillimage" src="images/c-logo.png"></li>
-				<li><img class="skillimage" src="images/c++-logo.png"></li>
-				<li><img class="skillimagewide" src="images/python-logo.png"></li>
-				<li><img class="skillimage" src="images/java-logo.png"></li>
-				<li><img class="skillimage" src="images/html-logo.png"></li>
-				<li><img class="skillimage" src="images/git-logo.png"></li>
-			</ul>
-		</div>
-
-		<div class="container-fluid section">
-
-			<h2>Work Experience</h2>
-			<hr>
-
-			<div class="container-fluid workexp-item">
-				<img class="workexp-image" src="images/fitbit-logo.png"></li>
-			</div>
-			<div class="container-fluid workexp-desc">
-				<p class="workexp-text">
-					Firmware Engineer - <em>Fitbit, San Fransisco, CA</em>
-				</p>
-				<br>
-				<ul>
-					<li>Part of the team architecting a new IP over BLE network stack for robust and high throuphput <br> communication for next generation fitness trackers</li>
-					<li>Worked on issues related to tracker based notifications from mobile devices over BLE</li>
-					<li>Worked on clock sequencer, BLE and Bootloader issues on Fitbit Higgs platform</li>
-				</ul>
-			</div>
-
-			<div class="container-fluid workexp-item">
-				<img class="workexp-image" src="images/microsoft-logo.png"></li>
-			</div>
-			<div class="container-fluid workexp-desc">
-				<p class="workexp-text">
-					Software Development Intern - <em>Microsoft Xbox, Redmond, WA</em>
-				</p>
-				<br>
-				<ul>
-					<li>Wireless firmware development for Xbox console radio</li>
-					<li>Worked on project to reduce the wireless hardware cost by 50%</li>
-				</ul>
-			</div>
-
-			<div class="container-fluid workexp-item">
-				<img class="workexp-image" src="images/nokia-logo.jpg"></li>
-			</div>
-			<div class="container-fluid workexp-desc">
-				<p class="workexp-text">
-					Senior Engineer - <em>Nokia Networks, Bangalore, IN</em>
-				</p>
-				<br>
-				<ul>
-					<li>Developed Software suite from ground up for validating the functional and performance characteristics of Protocol Independent Multicast (PIM - SM) and IGMP</li>
-					<li>Verified and simulated multiple traffic stream performance for in house FPGA based data frame generator (for Y.1564 protocol)</li>
-					<li>Wrote software for testing Y.1564, IP Multicast feature on multi-chassis Alcatel SAS-R platform</li>
-					<li>High availability verification software for SAS-R platform</li>
-					<li>Developed API`s to simulate congested IP Multicast network over Alcatel 7210 series routers</li>
-					<li>Code for adding QoS, MAC/IP Filter over IP Multicast networks and verifying the traffic flow</li>
-					<li>Created a flexible software framework to append the feature set for ITU-T Y.1564 protocol for Alcatel- Lucent 7210 SAS-K platform </li>
-				</ul>
-			</div>
-
-			<div class="container-fluid workexp-item">
-				<img class="workexp-image" src="images/nokia-logo.jpg"></li>
-			</div>
-			<div class="container-fluid workexp-desc">
-				<p class="workexp-text">
-					Software Engineer - <em>Nokia Networks, Bangalore, IN</em>
-				</p>
-				<br>
-				<ul>
-					<li>Improved the running time of ITU-T Y.1564 Ethernet activation test suite by around 25%, for the Alcatel 7210 series routers</li>
-					<li>Wrote the Quality of Service (QoS) and IP/Mac filter verification code for Alcatel SAS-X, SAS-M and SAS-T platforms</li>
-				</ul>
-			</div>
-
-		</div>
-
-		<div class="container-fluid footer">
-
-		</div>
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-86782922-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-
-	</body>
-
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    
+</body>
 </html>
